--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,7 @@
 DATABASE_URL=mongodb://0.0.0.0:27017/veeresh
+
+#  My SQL Changes
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=yourpassword
+DB_NAME=yourdatabase    
