--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,35 @@
 {
-  "name": "backend",
+  "name": "organization_management",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "backend for organization management",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node ./bin/www",
+    "debug": "nodemon ./bin/www"
   },
-  "author": "",
+  "author": "veeresh",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.596.0",
+    "@aws-sdk/s3-request-presigner": "^3.596.0",
+    "bcrypt": "^5.1.1",
+    "colors": "^1.4.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.4.0",
-    "nodemon": "^3.1.1"
+    "jade": "^1.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "liquibase": "^4.27.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.10.0",
+    "node-file-logger": "^0.9.5",
+    "node-input-validator": "^4.5.1",
+    "nodemailer": "^6.9.14",
+    "sequelize": "^6.37.3",
+    "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.3"
   }
 }
